added "reload frame" command (https://github.com/Robbendebiene/Gesturefy/issues/250) + minor command fix

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -116,7 +116,7 @@
       <label for="CommandSettingRestoreCurrentWindow"></label>
     </template>
 
-    <template data-commands="ReloadTab ReloadAllTabs">
+    <template data-commands="ReloadTab ReloadFrame ReloadAllTabs">
       <div class="cb-setting-label">
         <p data-i18n="commandSettingNameReloadCache" class="cb-setting-name"></p>
         <p data-i18n="commandSettingDescriptionReloadCache" class="cb-setting-description"></p>
