theme-button closes on blur

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -54,7 +54,7 @@
       </li>
     </ul>
 
-    <div class="themes">
+    <div class="themes" id="themes" tabindex="1">
       <input class="theme-checkbox" id="themeCheckbox" type="checkbox">
       <label for="themeCheckbox" class="button theme-value" id="themeValue"></label>
       <div class="theme-values" id="themeValues"></div>
