partially added "send message to other addon" command; changed the addon id to the current id; changed gesture item style

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -184,6 +184,22 @@
       <input name="url" class="input-field" required="" type="url">
     </template>
 
+    <template data-commands="SendMessageToOtherAddon">
+      <div class="cb-setting-label">
+        <p data-i18n="commandSettingNameCustomURL" class="cb-setting-name"></p>
+        <a href="#" data-i18n="commandSettingDescriptionCustomURL" class="cb-setting-description"></a>
+      </div>
+      <input name="extensionId" class="input-field" required="" type="text">
+    </template>
+
+    <template data-commands="SendMessageToOtherAddon">
+      <div class="cb-setting-label">
+        <p data-i18n="commandSettingNameCustomURL" class="cb-setting-name"></p>
+        <p data-i18n="commandSettingDescriptionCustomURL" class="cb-setting-description"></p>
+      </div>
+      <textarea name="message" class="text-field" required=""></textarea>
+    </template>
+
     <template data-commands="ClearBrowsingData">
       <div class="cb-setting-label">
         <p data-i18n="commandSettingNameClearBrowsingDataCache" class="cb-setting-name"></p>
