minor css adjustments + clean up

--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -28,10 +28,11 @@
 
   <main>
     <h1 data-i18n="navigationBlacklist"></h1>
-    <p class="explanation bl-explanation">
-      <u data-i18n="explanationBlacklistHeading"></u>
-      <span data-i18n="explanationBlacklistText"></span>
+    <p class="justify-text">
+      <em data-i18n="explanationBlacklistHeading"></em>
+      <span class="small-text" data-i18n="explanationBlacklistText"></span>
     </p>
+    <hr>
     <div class="bl-insert">
       <input id="blAddressInput" class="bl-addAddress">
       <button class="bl-add-button" id="blAddEntry" type="button">+</button>
