--- a/src/ui/html/content/gestures.html
+++ b/src/ui/html/content/gestures.html
@@ -16,10 +16,11 @@
 <body>
   <main id="Main">
     <h1 data-i18n="navigationGestures"></h1>
-    <p class="explanation">
-      <u data-i18n="explanationGesturesHeading"></u>
-      <span data-i18n="explanationGesturesText"></span>
+    <p class="justify-text">
+      <em data-i18n="explanationGesturesHeading"></em>
+      <span class="small-text" data-i18n="explanationGesturesText"></span>
     </p>
+    <hr>
     <ul id="Gestures" class="gesture-list"></ul>
   </main>
 </body>
