--- a/src/ui/html/content/about.html
+++ b/src/ui/html/content/about.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/ui/css/content.css">
   <link rel="stylesheet" id="Theme">
 
+  <script src="/lib/backgroundCommons.js" defer></script>
   <script src="/ui/js/content.js" defer></script>
   <script src="/ui/js/content/about.js" defer></script>
 </head>
@@ -13,29 +14,31 @@
 <body>
   <main>
     <h1 data-i18n="navigationAbout"></h1>
-    <p class="text">
-      <strong> <span data-manifest="name"></span>, Version: <span data-manifest="version"></span></strong>
+    <p class="small-spacing">
+      <strong>
+        <span data-manifest="name"></span>, Version: <span data-manifest="version"></span>
+      </strong>
     </p>
-    <p class="text">
+    <p class="justify-text">
       <strong data-i18n="aboutLicense"></strong>
       GNU GPLv3
       Permissions of this strong copyleft license are conditioned on making available complete source code of licensed works and modifications, which include larger works using a licensed work, under the same license. Copyright and license notices must be preserved. Contributors provide an express grant of patent rights.
     </p>
     <hr>
-    <p class="text">
+    <p>
       <strong data-i18n="aboutContributors"></strong>
       <a href="https://github.com/Robbendebiene/Gesturefy/graphs/contributors">Github</a>,
       <a href="https://crowdin.com/project/gesturefy">Crowdin</a>
     </p>
     <hr>
-    <ul class="sequence">
+    <ul class="horizontal-list">
       <li><a target="_blank" href="https://github.com/Robbendebiene/Gesturefy/issues" data-i18n="aboutLinkBug"></a></li>
       <li><a target="_blank" href="https://github.com/Robbendebiene/Gesturefy" data-i18n="aboutLinkCode"></a></li>
       <li><a target="_blank" href="https://addons.mozilla.org/firefox/addon/gesturefy/" data-i18n="aboutLinkAddon"></a></li>
     </ul>
     <hr>
-    <div class="container contentAlignRight">
-      <button id="backupButton" data-i18n="aboutBackup" class="button"></button>
+    <div class="align-content-right">
+      <a id="backupButton" data-i18n="aboutBackup" class="button"></a>
       <label class="button" for="restoreButton">
         <span data-i18n="aboutRestore"></span>
         <input type="file" id="restoreButton" name="files" accept=".json" hidden>
