changed theme function

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -54,11 +54,10 @@
       </li>
     </ul>
 
-    <div class="themes" id="themes" tabindex="1">
-      <input class="theme-checkbox" id="themeCheckbox" type="checkbox">
-      <label for="themeCheckbox" class="button theme-value" id="themeValue"></label>
-      <div class="theme-values" id="themeValues"></div>
+    <div class="theme-circles" id="themeCircles">
+      <div class="theme-wrapper" id="themeWrapper"></div>
     </div>
+
   </div>
 
   <iframe id="Content" height="100%" src="#"></iframe>
