--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gesturefy</title>
-  <link rel="icon" type="image/png" href="../../res/icons/iconx32.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="../../res/img/iconx32.png" sizes="16x16">
   <link rel="stylesheet" href="/ui/css/layout.css">
   <link rel="stylesheet" href="/ui/css/index.css">
   <link rel="stylesheet" href="/ui/css/modules/overlay.css">
@@ -18,7 +18,7 @@
 <body>
   <div id ="Sidebar">
     <h1>
-      <img src="../../res/icons/iconx96.png">
+      <img src="../../res/img/iconx96.png">
       <span data-manifest="name"></span>
     </h1>
     <ul class="navigation">
